--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
             var data=remote_ip_info;
             var city=data.city;
             getWeather(city);
-            console.log(data);
+            console.log(city);
         });
+
         //得到城市天气函数
         function getWeather(city){
             $.ajax({
@@ -131,11 +132,11 @@
 							 <div class="future_box today">
 								<div class="future_top">
 									<span class="future_date">今天</span>
-									<p><span class="today_hightemp">${val.day.temphigh}</span>/<span class="today_hightemp">${val.night.templow}</span>°C</p>
+									<p><span class="today_hightemp">${val.day.temphigh}</span><span class="today_hightemp">${val.night.templow}</span>°C</p>
 								</div>
 								<div class="future_top">
 									<span class="today_weather">${val.day.weather}/${val.night.weather}</span>
-									<div class="today_img"><img src="weathercn02/${val.day.img}.png">/<img src="weathercn/${val.night.img}.png"></div>
+									<div class="today_img"><img src="weathercn02/${val.day.img}.png"><img src="weathercn/${val.night.img}.png"></div>
                         		</div>
                         	</div>
                             `;
@@ -148,14 +149,14 @@
 								</div>
 								<div class="future_top">
 									<span class="tomorrow_weather">${val.day.weather}/${val.night.weather}</span>
-									<div class="tomorrow_img"><img src="weathercn02/${val.day.img}.png">/<img src="weathercn/${val.night.img}.png"></div>
+									<div class="tomorrow_img"><img src="weathercn02/${val.day.img}.png"><img src="weathercn/${val.night.img}.png"></div>
 							</div>
 							`;
 						}
                         weeks+=`<li>
                         	<h1 class="week_date">${val.date}</h1>
                         	<h2 class="week_weather">${val.day.weather}/${val.night.weather}</h2>
-                        	<div class="week_img"><img src="weathercn02/${val.day.img}.png">/<img src="weathercn/${val.night.img}.png"></div>
+                        	<div class="week_img"><img src="weathercn02/${val.day.img}.png"><img src="weathercn/${val.night.img}.png"></div>
                         	<h3 class="week_hightemp">${val.day.temphigh}℃</h3>
                         	<h4 class="week_lowtemp">${val.night.templow}℃</h4>
                         	<h5 class="week_wind">${val.day.winddirect}</h5>
@@ -168,7 +169,7 @@
                     $.each(data2,function(index,val){
                         hours+=`<li>
 							<h1 class="hours_time">${val.time}</h1>
-							<div class="hours_img"><img src="weathercn02/${val.img}.png">/<img src="weathercn/${val.img}.png"></div>
+							<div class="hours_img"><img src="weathercn02/${val.img}.png"></div>
 							<h2 class="hours_temp"><span>${val.temp}</span>℃</h2>
 						</li>
                         `;
